--- a/manifests/javascript/values.yaml
+++ b/manifests/javascript/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: bfeuling/main
+  repository: registry.hub.docker.com/bfeuling/main
   pullPolicy: IfNotPresent
   tag: 1.0.1
 
