--- a/manifests/javascript/values.yaml
+++ b/manifests/javascript/values.yaml
@@ -1,9 +1,9 @@
 replicaCount: 1
 
 image:
-  repository: registry.hub.docker.com/bfeuling/main
+  repository: registry.hub.docker.com/harness/todolist-sample
   pullPolicy: IfNotPresent
-  tag: 1.0.1
+  tag: 23
 
 imagePullSecrets: []
 nameOverride: ""
